--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -71,7 +71,7 @@
   color: white;
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 15px;
+  font-size: 17px;
   line-height: 25px;
   text-transform: capitalize;
   margin: 0 1rem;
