--- a/src/containers/Editguide/editguide.css
+++ b/src/containers/Editguide/editguide.css
@@ -100,6 +100,7 @@ button:hover {
   word-wrap: break-word;
   text-overflow: ellipsis;
   overflow: hidden;
+  white-space: pre-line;
 }
 
 /* background-color: #1e1e1e; */
@@ -213,43 +214,45 @@ button:hover {
 .waw__editguide-step-div {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  font-family: var(--font-family);
+  font-size: 17px;
 }
 
 .waw__editguide-step {
   border-top: 1px solid grey;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  text-align: center;
-  color: #c3d1db;
-  padding: 3rem 1.5rem;
-  margin: 0rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* text-align: center; */
+    color: #c3d1db;
+    padding: 3rem 1.5rem;
+    margin: 0rem;
+
 }
 
-.waw__editguide-step-step div {
-  /* max-width: 36rem; */
-}
 
 .waw__editguide-step-step {
   display: flex;
-  justify-content: center;
-  padding-top: 1rem;
-  padding-bottom: 0rem;
+    justify-content: center;
+    padding-top: 3rem;
+    padding-bottom: 0rem;
+    max-width: 48rem;
 }
 
 .waw__editguide-step p {
-  display: flex;
   font-family: var(--font-family);
-  word-break: break-all;
-  /* max-width: 50rem; */
+  word-wrap: break-word;
+  max-width: 48rem;
   text-align: center;
   font-size: 17px;
-  padding: 0rem 2rem 1rem;
+  padding-bottom: 1.5rem;
+  white-space: pre-line;
 }
 
 .waw__editguide-editstep-button {
   display: flex;
-  padding: 0.5rem 33rem 0rem 0rem;
+  padding: 0.5rem 40rem 0rem 0rem;
   margin-left: 1.8rem;
 }
 
@@ -369,7 +372,7 @@ button:hover {
 }
 
 .waw__editguide-editstep-div div div {
-  margin: 0.4rem;
+  margin: 0.2rem;
   display: flex;
 }
 
@@ -811,7 +814,7 @@ button:hover {
     border-radius: 5px;
     border: 1px solid grey;
     font-size: 17px;
-    width: 15rem;
+    width: 14rem;
     margin-left: 2rem;
   }
 
@@ -1466,7 +1469,7 @@ button:hover {
     color: #c3d1db;
     padding: 1.8rem 0.5rem;
     margin: 0rem;
-    width: 34rem;
+    width: 32rem;
   }
 
   .waw__editguide-step-step {
@@ -1480,7 +1483,7 @@ button:hover {
   .waw__editguide-step p {
     font-family: var(--font-family);
     word-wrap: break-word;
-    max-width: 36rem;
+    max-width: 32rem;
     text-align: center;
     font-size: 17px;
     padding-bottom: 1.5rem;
@@ -1488,7 +1491,7 @@ button:hover {
 
   .waw__editguide-editstep-button {
     display: flex;
-    padding: 0.5rem 27rem 0rem 0rem;
+    padding: 0.5rem 24rem 0rem 0rem;
   }
 
   .waw__editguide-editstep-button button {
@@ -1536,6 +1539,7 @@ button:hover {
   .waw__editguide-newstep-div div {
     display: flex;
     flex-direction: column;
+
   }
 
   .waw__editguide-newstep-div textarea {
@@ -1607,7 +1611,7 @@ button:hover {
 
   .waw__editguide-editstep-div div div {
     /* display: flex; */
-    display: inline;
+    /* display: inline; */
   }
 
   .waw__editguide-editstep-div div div button {
